pallets/phala/src/snapshots/phala_pallets__test__withdraw9.snap
---
source: pallets/phala/src/test.rs
expression: take_events()
---
[
    RuntimeEvent::Assets(
        Event::Transferred {
            asset_id: 1,
            from: 13009150994509951074,
            to: 1,
            amount: 100000000000000,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10001,
            maybe_nft_id: Some(
                2,
            ),
            key: BoundedVec(
                [
                    115,
                    116,
                    97,
                    107,
                    101,
                    45,
                    105,
                    110,
                    102,
                    111,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                512000,
            ),
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertiesRemoved {
            collection_id: 10001,
            maybe_nft_id: Some(
                2,
            ),
        },
    ),
    RuntimeEvent::Uniques(
        Event::Burned {
            collection: 10001,
            item: 2,
            owner: 7813586407040180578,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::NFTBurned {
            owner: 7813586407040180578,
            collection_id: 10001,
            nft_id: 2,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertyRemoved {
            collection_id: 10001,
            maybe_nft_id: Some(
                2,
            ),
            key: BoundedVec(
                [
                    99,
                    114,
                    101,
                    97,
                    116,
                    101,
                    116,
                    105,
                    109,
                    101,
                ],
                32000,
            ),
        },
    ),
    RuntimeEvent::PhalaBasePool(
        Event::Withdrawal {
            pid: 1,
            user: 1,
            amount: 100000000000000,
            shares: 100000000000000,
            burnt_shares: 0,
        },
    ),
]
